tests/paczka2/big_fuzzy/76901187.err
Error in line 4: 0IPpElo S741 26,8
Error in line 23: oTL4 A91 87,9
Error in line 16: 0IPpElo S502 73,7
Error in line 25: cDJeJ A91 45,7
Error in line 27: 0IPpElo S741 72,4
Error in line 35: tWKph1zg A91 18,8
Error in line 37: 0IPpElo S502 77,5
Error in line 50: 7UInGqCYFV S502 121,23
Error in line 45: 7UInGqCYFV S502 33,6
Error in line 60: 0IPpElo A91 86,6
Error in line 65: cDJeJ S741 34,8
Error in line 70: 7UInGqCYFV A91 -5,7
Error in line 72: oTL4 S741 8,0
Error in line 77: 0IPpElo S502 91,9
Error in line 79: tWKph1zg S502 72,6
Error in line 106: oTL4 A91 30,3
Error in line 112: 7UInGqCYFV S741 74,8
Error in line 123: tWKph1zg A91 88,1
Error in line 127: cDJeJ A5G4 G6,7
Error in line 114: 0IPpElo A514 85,7
Error in line 122: 7UInGqCYFV S502 82,8
Error in line 129: 0IPpElo A91 24,1
Error in line 126: tWKph1zg A514 37,5
Error in line 116: cPbHhsqz A514 13,7
Error in line 142: A514 A91 45,6
Error in line 140: oTL4 A91 49,6
Error in line 151: cPbHhsqz S502 52,7
Error in line 156: cDJeJ S741 53,5
Error in line 148: 7UInGqCYFV A91 24,0
Error in line 153: tWKph1zg S741 81,1
Error in line 160: 7UInGqCYFV S502 22,3
Error in line 166: 7UInGqCYFV A91 21,5
Error in line 162: tWKph1zg S502 31,9
Error in line 157: cDJeJ S74 56,2
Error in line 175: tWKph1zg S741 47,4
Error in line 182: oTL4 A514 5,5
Error in line 185: 0IPpElo A514 31,9
Error in line 192: oTL4 S502 31,5
Error in line 196: 0IPpElo S502 92,1
Error in line 206: oTL4 S741 47,68
Error in line 202: cDJeJ A91 221,4
Error in line 213: A514 S502 18,0
Error in line 215: 7UInGqCYFV A91 13,7
Error in line 217: cPbHhsqz A91 63,1
Error in line 222: oTL4 A91 97,2
Error in line 220: 0IPpElo A91 51,2
Error in line 239: oTL4 A514 18,8
Error in line 237: tWKph1zg A514 331,0
Error in line 238: 0IPpElo A514 84,7
Error in line 243: cDJeJ S741 27,3
